2025年12月31日_更新

--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@ body.change-theme *::after {
   <img src="https://pic3.zhimg.com/3c17d246edef3567cbc977daa6c38a9a_r.jpg" alt="红光绿影_试验照片一">
   <img src="https://pic2.zhimg.com/efd3406121ea1b4c61068ba14f5d94b9_r.jpg" alt="红光绿影_试验照片二">
   视频 《奇怪的“红光绿影·蓝光黄影”现象》<br>
-  知乎：  https://www.zhihu.com/zvideo/1982182194530243464 <br>
-  B站：  https://www.bilibili.com/video/BV1WSmtBzEve/ <br>
-  抖音：  https://www.douyin.com/video/7582210513694641414 <br>
+  知乎： <a href="https://www.zhihu.com/zvideo/1982182194530243464" rel="nofollow">https://www.zhihu.com/zvideo/1982182194530243464</a><br>
+  B站： <a href="https://www.bilibili.com/video/BV1WSmtBzEve/" rel="nofollow">https://www.bilibili.com/video/BV1WSmtBzEve/</a><br>
+  抖音： <a href="https://www.douyin.com/video/7582210513694641414" rel="nofollow">https://www.douyin.com/video/7582210513694641414</a></p>
   　<br>
   以上二图是我在知乎 2016-09-29 提出的问题，无人回答：<br>
   《你在家也能做的“诡异的光影实验”（有照片），阴影的颜色从何而来？》<br>
-  https://www.zhihu.com/question/51135677 <br>
+  <a href="https://www.zhihu.com/question/51135677" rel="nofollow">https://www.zhihu.com/question/51135677</a><br>
   我于 2025-02-03 向 DeepSeek 深度思索 R1 提问（纯文字、无图片），<br>
   　<br>
   经过三次有效问答，得到现象解释、数学推导、创新实验设计、公式验证与拓展。<br>
